<resources>
    <string name="app_name">RESEC</string>
    <string name="enter_userid">Enter UserID</string>
    <string name="enter_userpin">Enter UserPin</string>
    <string name="save">Save</string>
    <string name="edit">Change Credentials</string>
    <string name="toggle">Turn Active</string>
    <string name="user_credentials">User-Credentials</string>
    <string name="resec_state_active">Resec is Active</string>
    <string name="resec_state_inactive">Resec is Inactive</string>
    <string name="resec_des">Resec is an offline service assistant which helps to operate services remotely through SMS. You can access contacts, get device location, change sound profile and much more through some SMS.</string>
    <string name="status">Status</string>
    <string name="sound">Sound</string>
    <string name="normal">NORMAL</string>
    <string name="vibrate">VIBRATE</string>
    <string name="silent">SILENT</string>
    <string name="ringtone">Ringtone</string>
    <string name="media">Media</string>
    <string name="notifications">Notifications</string>
    <string name="brightness">Brightness</string>
    <string name="preference_settings">Preference Settings</string>
    <string name="save_settings">Save Settings</string>
    <string name="select_time">Start Time</string>
    <string name="add_pref">Add Pref</string>
    <string name="end_time">End Time</string>
    <string name="time_period">Start Time</string>
    <string name="_colon">:</string>
    <string name="sound_profile">Sound Profile :</string>
    <string name="time_buffer">10:50 AM - 10:50 PM</string>
    <string name="_0000">0000</string>
    <string name="time_period_text">%1$s</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="appwidget_text">RESEC</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="deleteicon">DeleteIcon</string>
    <string name="AboutUs">This App has been designed and developed by Siddharth Singh. NO Copyrights are intended.</string>
    <string name="close">CLOSE</string>
</resources>