<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg01"
    tools:context=".main.DashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/white_shade"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/resec_des"
                        android:textColor="@color/black_shade"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/stateTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/resec_state_inactive"
                        android:textColor="@color/red"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/stateBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/toggle"
                        android:textSize="11sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                app:cardBackgroundColor="@color/white_shade"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                tools:layout_editor_absoluteX="20dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_light"
                        android:includeFontPadding="false"
                        android:text="@string/user_credentials"
                        android:textColor="@color/sky_blue"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_et"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/userId"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:hint="@string/enter_userid"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="text"
                            android:textColor="@color/black_shade" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_user"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_et"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/userPin"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:hint="@string/enter_userpin"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="numberPassword"
                            android:textColor="@color/black_shade" />

                        <ImageView
                            android:id="@+id/pin_visibility"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:background="?attr/selectableItemBackground"
                            android:src="@drawable/ic_visibility"
                            android:tag="visi"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/saveBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/save"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                tools:listitem="@layout/setting_layout_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/white_shade"
            app:fabAnimationMode="scale"
            app:fabAlignmentMode="end"
            app:menu="@menu/bottom_bar_items"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPrefSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_add"
            app:layout_anchor="@+id/bottomAppBar"
            android:contentDescription="@string/floatingactionbutton" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>